tests/test_files/invalid/semantic/duplicate_components.pfdl
# Copyright The MF-Plugin Contributors
#
# Licensed under the MIT License.
# For details on the licensing terms, see the LICENSE file.
# SPDX-License-Identifier: MIT

Struct Test
    type : string
End

Struct Test
    type : string
End

Location location1
    type: "type"
End

Location location1
    type: "type"
End

Location production1
    type: "type"
End

Rule before(event1, event2, offset = 0)
    (event1.time + offset < event2.time) And (event1.value == 5)
End

Rule before(event1, event2, offset = 0)
    (event1.time + offset < event2.time) And (event1.value == 5)
End

TransportOrderStep tosWarehouse1
    Location location1
End

TransportOrderStep tosWarehouse1
    Location location1
End

TransportOrderStep tosProduction1
    Location production1

    Parameters {"loadDirection" : "unload" , "liftHeight": 0}
End

ActionOrderStep aosWarehouse1
    Parameters {"loadDirection" : "load" , "liftHeight": 0}
End

ActionOrderStep aosWarehouse1
    Parameters {"loadDirection" : "load" , "liftHeight": 0}
End

Task helloWorld
    Transport
    From tosWarehouse1
    To tosProduction1
End

Task helloWorld
    Transport
    From tosWarehouse1
    To tosProduction1
End

Task mainTask
    Test
End
